Fix text overflow in works-description

--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@
   .wrapper-flex-3 {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     margin-left: 1.66%;
     width: 40.83%;
   }
@@ -183,17 +184,20 @@
     align-items: center;
     color: #091e42;
     margin-top: 0%;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
   }
 
   .works-description {
     width: 100%;
-    height: 140px;
+    height: 100%;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 28px;
     color: #091e42;
+    overflow-y: hidden;
   }
 
   .button-container {
@@ -364,8 +368,7 @@
 
   .card-0 {
     background: url(./images/Placeholder2.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: no-repeat;    
   }
 
   .card-1 {
@@ -377,14 +380,12 @@
         rgba(38, 38, 38, 0.9) 61.94%
       ),
       url(./images/card-1-back.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: no-repeat;    
   }
 
   .card-2 {
     background: url(./images/card-4-back.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: no-repeat;    
   }
 
   .card-3 {
@@ -396,8 +397,7 @@
         rgba(38, 38, 38, 0.9) 61.94%
       ),
       url(./images/Placeholder2.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: no-repeat;    
   }
 
   .card-4 {
@@ -409,14 +409,12 @@
         rgba(38, 38, 38, 0.9) 61.94%
       ),
       url(./images/card-1-back.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: no-repeat;    
   }
 
   .card-5 {
     background: url(./images/card-4-back.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: no-repeat;    
   }
 
   .finale {
@@ -747,6 +745,8 @@
 
   .img-popup-desktop {
     flex: 0.59;
+    width: 59%;
+    height:70%;
   }
 
   .popup-title {
